--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: sans-serif;
+  padding: 0; 
+  background: url(/img/mario-bg.png) no-repeat;
+  background-size: 100%;
+  background-position: bottom; 
+  background-color: #95e8f3;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+html{ 
+  min-height: 100%;
+  margin-top: 60px;
+}
+
+form {
+  padding: 20px;
+  margin-top: 68px;
+}
+
+form button, form h5 { 
+  margin: 20px 0;
 }
